--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
     <!-- start hero section-->
     <div class="w-full h-screen bg-cover bg-center  flex justify-center items-center relative"
-        style="background-image: url('/image/background-img.avif');">
+        style="background-image: url('image/background-img.avif');">
         <div class="absolute inset-0 bg-black/50 bg-opacity-50"></div>
         <div class="relative z-10  text-white">
             <p class="text-2xl font-medium mb-4 text-center">We're Getting Married</p>
@@ -116,7 +116,7 @@
             <!--mr. sndp intro-->
             <div class="text-center">
                 <div class="w-64 h-64 relative inline-block">
-                    <img src="/image/boy-img.avif" alt="man-img" class="w-full h-full object-cover rounded-full">
+                    <img src="image/boy-img.avif" alt="man-img" class="w-full h-full object-cover rounded-full">
                 </div>
                 <h1 class="text-2xl font-semibold mt-4">Sndp Bag</h1>
                 <p class="text-[#374151] mt-2">Son of Mr. & Mrs. Bag</p>
@@ -130,7 +130,7 @@
 
             <div class="text-center">
                 <div class="w-64 h-64 relative inline-block">
-                    <img src="/image/girls-img.avif" alt="girl-img" class="w-full h-full object-cover rounded-full ">
+                    <img src="image/girls-img.avif" alt="girl-img" class="w-full h-full object-cover rounded-full ">
                 </div>
                 <h1 class=" text-2xl font-semibold mt-4">Riya Hoodati</h1>
                 <p class="text-[#374151] mt-2 ">Daughter of Mr. & Mrs. Hoodati</p>
@@ -248,32 +248,32 @@
         <div class="w-full grid grid-cols-1 md:grid-cols-3 gap-6 mt-8">
 
             <div class="h-64 shadow-md inline-block overflow-hidden rounded-lg">
-                <img src="/image/moment-1.avif" alt="photo"
+                <img src="image/moment-1.avif" alt="photo"
                     class="w-full h-full object-cover rounded-lg hover:scale-110 transition-transform duration-300">
             </div>
 
             <div class="h-64 inline-block overflow-hidden rounded-lg">
-                <img src="/image/moment-6.avif" alt="photo"
+                <img src="image/moment-6.avif" alt="photo"
                     class="w-full h-full object-cover rounded-lg hover:scale-110 transition-transform duration-300">
             </div>
 
             <div class="h-64 shadow-md inline-block overflow-hidden rounded-lg">
-                <img src="/image/moment-3img.avif" alt="photo"
+                <img src="image/moment-3img.avif" alt="photo"
                     class="w-full h-full object-cover rounded-lg hover:scale-110 transition-transform duration-300">
             </div>
 
             <div class="h-64 shadow-md inline-block overflow-hidden rounded-lg">
-                <img src="/image/moment-4.avif" alt="photo"
+                <img src="image/moment-4.avif" alt="photo"
                     class="w-full h-full object-cover rounded-lg hover:scale-110 transition-transform duration-300">
             </div>
 
             <div class="h-64 shadow-md inline-block overflow-hidden rounded-lg">
-                <img src="/image/moment-5.avif" alt="photo"
+                <img src="image/moment-5.avif" alt="photo"
                     class="w-full h-full object-cover rounded-lg hover:scale-110 transition-transform duration-300">
             </div>
 
             <div class="h-64 shadow-md inline-block overflow-hidden rounded-lg">
-                <img src="/image/moment-6.avif" alt="photo"
+                <img src="image/moment-6.avif" alt="photo"
                     class="w-full h-full object-cover rounded-lg hover:scale-110 transition-transform duration-300">
             </div>
 
