--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
         <!--wedding location img-->
         <div class="w-full h-60 mx-auto mt-2 ">
-            <img class=" w-full h-full  object-cover rounded-md mt-4" src="/image/wedding-location.avif" alt="">
+            <img class=" w-full h-full  object-cover rounded-md mt-4" src="image/wedding-location.avif" alt="">
         </div>
 
 
